[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/player/legIk.gd" type="Script" id=1]
[ext_resource path="res://assets/Slug/Legs/leg_seg_upper.png" type="Texture" id=2]
[ext_resource path="res://assets/Slug/Legs/leg_seg_lower.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/leg.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="base" type="Position2D" parent="."]
script = ExtResource( 1 )

[node name="leg_upper" type="Sprite" parent="base"]
position = Vector2( 11, 0 )
texture = ExtResource( 2 )

[node name="knee" type="Position2D" parent="base"]
position = Vector2( 23, 0 )

[node name="leg_lower" type="Sprite" parent="base/knee"]
position = Vector2( 10, 0 )
z_index = -1
texture = ExtResource( 3 )

[node name="tip" type="Position2D" parent="base/knee"]
position = Vector2( 20, 0 )

[node name="target" type="KinematicBody2D" parent="base"]
position = Vector2( 32, 0 )

[node name="restPos" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="forePos" type="Position2D" parent="."]
position = Vector2( 29, 14 )

[node name="backPos" type="Position2D" parent="."]
position = Vector2( 26, -19 )

[node name="Camera2D" type="Camera2D" parent="."]
